--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.artkonr</groupId>
-    <artifactId>handy-monad</artifactId>
+    <artifactId>monad</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>A collection of assorted user-friendly monads.</description>
     <packaging>jar</packaging>
@@ -282,7 +282,7 @@
                 <repository>
                     <id>github</id>
                     <name>GitHub Packages</name>
-                    <url>https://maven.pkg.github.com/artkonr/*</url>
+                    <url>https://maven.pkg.github.com/artkonr</url>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
@@ -294,7 +294,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <url>https://maven.pkg.github.com/artkonr/handy-monad</url>
+            <url>https://maven.pkg.github.com/artkonr/monad</url>
         </repository>
     </distributionManagement>
     
