--- a/pom.xml
+++ b/pom.xml
@@ -282,7 +282,7 @@
                 <repository>
                     <id>github</id>
                     <name>GitHub Packages</name>
-                    <url>https://maven.pkg.github.com/artkonr/*</url>
+                    <url>https://maven.pkg.github.com/artkonr/</url>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
