--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.artkonr</groupId>
     <artifactId>monad</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <description>A collection of assorted user-friendly monads.</description>
     <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -13,7 +13,7 @@
     <scm>
         <url>https://github.com/artkonr/monad.git</url>
         <connection>scm:git:https://github.com/artkonr/monad.git</connection>
-        <tag>v1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
