--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.artkonr</groupId>
     <artifactId>monad</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
     <description>A collection of assorted user-friendly monads.</description>
     <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>io.github.artkonr</groupId>
             <artifactId>ensure</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
@@ -107,9 +107,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>build-javadoc</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <reportOutputDirectory>${project.basedir}/target/docs/javadocs</reportOutputDirectory>
-                    <destDir>apidocs</destDir>
                     <quiet>true</quiet>
                     <failOnError>true</failOnError>
                     <failOnWarnings>true</failOnWarnings>
